plumi/skin/theme_resources/stylesheets/foundation.css
/* ... */
#content div.newsImageContainer p.discreet {
    margin-top: 35px !important;
    width: 200px !important;
}

div.tileItem h2.tileHeadline {
    margin-bottom: 0px !important;
}

div.tileItem div.documentByLine {
    margin-top: -4px;
    margin-bottom: 10px;
    margin-left: 2px;
}

#feedback_form div.formControls {
   margin: 0
}

div.rollover .featuredItemDetailsPosted {
    font-size: 12px;
    float: left;
    margin-top: 5px;
}

#content .documentDescription, #content #description {
    padding-bottom: 10px;
}

.featuredVideo-date {
    color:white;
    float:left;
    padding: 0.45em 8px 0 0px;
    color: #EFEFF1;
    margin-bottom: 0px;
    font-size: 13px;
    line-height: 15px;
}

img#license_button1 {
    margin-left: -25px;
    margin-right: 10px;
}

.template-publish_video div.formControls {
margin-top: -50px;
margin-left: 25px;
}

div.footer div.portletWrapper {
    float:left;
}

div.footer dl.portlet span.portletTopLeft, div.footer dl.portlet dt.portletHeader,  div.footer dl.portlet dd.portletItem {
    background: none !important;
    border: none;
}

div.footer dl.portletNavigationTree dt.hiddenStructure {
    display: none !important;
}

div.footer dl.portlet ul.navTreeLevel0 > .navTreeItem {
    border: none !important;
    padding: 0 !important;
}

div.footer dl.portlet dd.portletItem a:link {
    font-size: 14px !important;
    color: #205C90 !important;
    font-weight: normal !important;
}

span.posted h4 {
    margin-bottom: 0;
}

ul.news li span.posted, ul.events li span.posted {
  padding-top: 0px;
}

ul.news, ul.events {
  padding-top: 1px;
}

ul.events a img {
  display: none;
}

ul.author-info {
  width: 86.667% !important;
}

form#login_form {
    padding: 1em;
}

form.kssattr-formname-register {
    width: 75%;
}

.author-info li.paypal {
  padding: 1px 10px;
}

